[package]
name = "meltos_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1.7"
async-trait = { version = "0.1.77" }
wasm-bindgen = { version = "0.2.90" }
wasm-bindgen-futures = { version = "0.4.40" }
serde-wasm-bindgen = "0.6.3"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
meltos = { path = "../meltos/crates/meltos" }
meltos_util = { path = "../meltos/crates/meltos_util" }
meltos_client = { path = "../meltos/crates/meltos_client" }
meltos_tvc = { path = "../meltos/crates/meltos_tvc" }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
directories = "5.0.1"
